# pdf-tools

./: .gitignore  README.md  pyproject.toml
pdf_tools/: cli.py  cli_translate.py
pdf_tools/extractors/: __init__.py  spatial_extractor.py
pdf_tools/generators/: __init__.py  pdf_generator.py
pdf_tools/processors/: ocr.py  translator.py
pdf_tools/providers/: __init__.py  openai_provider.py
tests/: test_ocr.py  test_translation.py
