[tool.poetry]
name = "pdf-tools"
version = "0.1.0"
description = "A collection of PDF processing tools including OCR capabilities"
authors = ["Nestor Urquiza "]
readme = "README.md"
packages = [{include = "pdf_tools"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ocrmypdf = "^16.1.1"
pytesseract = "^0.3.10"
pdf2image = "^1.16.3"
pypdf = "^3.17.0"  # Updated from PyPDF2
typer = "^0.9.0"
rich = "^13.7.0"
pydantic = "^2.5.0"
numpy = "^1.26.0"
reportlab = "^4.0.8"
"pdfminer.six" = "^20221105"  # Quoted package name with dot
requests = "^2.31.0"
openai = "^1.3.0"
pymupdf = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-tools = "pdf_tools.cli:app"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests",
]
